# DatalogProgramInterpreter

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Header.cpp  Header.h  ID_Automaton.cpp  ID_Automaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherFSA.cpp  MatcherFSA.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  ParserHelper.cpp  ParserHelper.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  (+10 more)
lab4.dSYM/Contents/Resources/DWARF/: lab4
